--- a/Backstage/Phone_REPLACEMENT/platformio.ini
+++ b/Backstage/Phone_REPLACEMENT/platformio.ini
@@ -12,4 +12,8 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = https://github.com/poprhythm/Touch-Tone-Midi.git
+lib_deps = 
+	https://github.com/poprhythm/Touch-Tone-Midi.git
+	https://github.com/mpflaga/Arduino_Library-vs1053_for_SdFat.git
+	thomasfredericks/Bounce2@^2.72
+monitor_speed = 115200
